<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:onClick="registrar"
            android:text="@string/cmd_registrar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:onClick="buscar"
            android:text="@string/cmd_buscar" />

        <Button
            android:id="@+id/button3"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:onClick="modificar"
            android:text="@string/cmd_modificar" />

        <Button
            android:id="@+id/button4"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:onClick="eliminar"
            android:text="@string/cmd_eliminar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txt_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lb_codigo"
            android:inputType="number" />

        <EditText
            android:id="@+id/txt_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lb_descripcion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lb_precio"
            android:inputType="numberDecimal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>